<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mindtedtech.android_enigma.activities.MainActivity">

    <item
        android:id="@+id/action_saved_runs"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/saved_runs"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_enigma_version"
        android:title="@string/version"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/enigma_I"
                    android:title="@string/enigma_I"
                    android:checked="true"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/enigma_m3"
                    android:title="@string/enigma_m3"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_runs"
        android:title="Delete Runs"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>